Add gradle deployment script
* windows deployments are not possible